<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/bg_app"
    android:layout_height="match_parent"
    tools:context="com.gdt.speedtest.features.main.MainActivity">
    <RelativeLayout
        android:id="@+id/layout_ads_adaptive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        >

    </RelativeLayout>

    <androidx.viewpager.widget.ViewPager
        android:layout_below="@id/layout_ads_adaptive"
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/layout_option_bottom"
        android:layout_alignParentStart="true" />

    <RelativeLayout
        android:background="#29333f"
        android:id="@+id/layout_option_bottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:padding="3dp">

        <LinearLayout
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/layout_speed"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_speed"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    app:srcCompat="@drawable/ic_speed_clicked" />

                <TextView
                    android:fontFamily="@font/robotoregular"
                    android:id="@+id/txt_test"
                    android:textSize="@dimen/_8sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:layout_marginBottom="@dimen/_2sdp"
                    android:text="@string/speed"
                    android:textColor="@color/color_blue" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_results"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_results"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    app:srcCompat="@drawable/ic_resu" />

                <TextView
                    android:fontFamily="@font/robotoregular"
                    android:id="@+id/txt_history"
                    android:textSize="@dimen/_8sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:layout_marginBottom="@dimen/_2sdp"
                    android:text="@string/result"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_setting"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_setting"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    app:srcCompat="@drawable/ic_setting" />

                <TextView
                    android:fontFamily="@font/robotoregular"
                    android:id="@+id/txt_settings"
                    android:textSize="@dimen/_8sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:layout_marginBottom="@dimen/_2sdp"
                    android:text="@string/setting"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>


</RelativeLayout>
