<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.gdt.speedtest.features.main.fragment.settings.SettingFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent"
        tools:background="@color/black"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/layout_rate_app"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_xxx"
                    app:srcCompat="@drawable/ic_rate"
                    style="@style/imv_title_setting"
                    android:tint="@color/white"
                    />

                <TextView
                    android:layout_toRightOf="@+id/img_xxx"
                    android:text="@string/rate"
                    style="@style/text_setting"
                    android:background="?attr/selectableItemBackground"
                    />

                <ImageView
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/xmargin_right"
                    android:padding="@dimen/_7sdp"
                    app:srcCompat="@drawable/ic_chevron_right_black_24dp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="@dimen/margin_left"
                android:background="#1ed5fafa" />

            <RelativeLayout
                android:id="@+id/layout_share_app"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_xxxx"
                    app:srcCompat="@drawable/ic_share"
                    style="@style/imv_title_setting"
                    />

                <TextView
                    android:layout_toRightOf="@+id/img_xxxx"
                    android:text="@string/share_app"
                    style="@style/text_setting"
                    android:background="?attr/selectableItemBackground"
                    />

                <ImageView
                    android:layout_centerVertical="true"
                    android:padding="@dimen/_7sdp"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/xmargin_right"
                    app:srcCompat="@drawable/ic_chevron_right_black_24dp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="@dimen/margin_left"
                android:background="#1ed5fafa" />

            <RelativeLayout
                android:id="@+id/layout_privacy"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_policy"
                    app:srcCompat="@drawable/ic_shield"
                    style="@style/imv_title_setting"
                    />

                <TextView
                    android:text="@string/policy"
                    android:layout_toRightOf="@+id/img_policy"
                    style="@style/text_setting"
                    android:background="?attr/selectableItemBackground"
                    />

                <ImageView
                    android:layout_centerVertical="true"
                    android:padding="@dimen/_7sdp"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/xmargin_right"
                    app:srcCompat="@drawable/ic_chevron_right_black_24dp" />
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="@dimen/margin_left"
                android:background="#1ed5fafa" />

            <RelativeLayout
                android:id="@+id/layout_report_bug"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_report_bug"
                    app:srcCompat="@drawable/ic_report_bug"
                    style="@style/imv_title_setting"
                    />

                <TextView
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:layout_toRightOf="@+id/img_report_bug"
                    android:text="Report Error in app"
                    style="@style/text_setting"
                    android:background="?attr/selectableItemBackground"
                    />

                <ImageView
                    android:layout_centerVertical="true"
                    android:padding="@dimen/_7sdp"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/xmargin_right"
                    app:srcCompat="@drawable/ic_chevron_right_black_24dp" />
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
