<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="304dp"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_background_dialog_rate"
    android:radius="30dp">

    <LinearLayout
        android:layout_width="304dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:id="@+id/tvTitleDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/title_rate_app"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold"
                android:fontFamily="@font/robotoregular"
                />

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@+id/tvTitleDialog" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:gravity="center">

            <RelativeLayout
                android:id="@+id/layout_stars1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img_stars1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_star_5dp"
                    app:srcCompat="@drawable/ic_star_rounded_big"
                    tools:ignore="VectorDrawableCompat" />

                <ImageView
                    android:id="@+id/img_stars_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:padding="@dimen/padding_star_5dp"
                    app:srcCompat="@drawable/ic_star_fill_rounded"
                    tools:ignore="VectorDrawableCompat" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_stars2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/layout_stars1">

                <ImageView
                    android:id="@+id/img_stars2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:padding="@dimen/padding_star_5dp"
                    app:srcCompat="@drawable/ic_star_rounded_big"
                    tools:ignore="VectorDrawableCompat" />

                <ImageView
                    android:id="@+id/img_stars_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:padding="@dimen/padding_star_5dp"
                    app:srcCompat="@drawable/ic_star_fill_rounded"
                    tools:ignore="VectorDrawableCompat" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_stars3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/layout_stars2">

                <ImageView
                    android:id="@+id/img_stars3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:padding="@dimen/padding_star_5dp"
                    app:srcCompat="@drawable/ic_star_rounded_big"
                    tools:ignore="VectorDrawableCompat" />

                <ImageView
                    android:id="@+id/img_stars_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:padding="@dimen/padding_star_5dp"
                    app:srcCompat="@drawable/ic_star_fill_rounded"
                    tools:ignore="VectorDrawableCompat" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_stars4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/layout_stars3">

                <ImageView
                    android:id="@+id/img_stars4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:padding="@dimen/padding_star_5dp"
                    app:srcCompat="@drawable/ic_star_rounded_big"
                    tools:ignore="VectorDrawableCompat" />

                <ImageView
                    android:id="@+id/img_stars_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:padding="@dimen/padding_star_5dp"
                    app:srcCompat="@drawable/ic_star_fill_rounded"
                    tools:ignore="VectorDrawableCompat" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/layout_stars4">

                <ImageView
                    android:id="@+id/img_stars5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:padding="@dimen/padding_star_5dp"
                    app:srcCompat="@drawable/ic_star_rounded_big"
                    tools:ignore="VectorDrawableCompat" />

                <ImageView
                    android:id="@+id/img_stars_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:padding="@dimen/padding_star_5dp"
                    app:srcCompat="@drawable/ic_star_fill_rounded"
                    tools:ignore="VectorDrawableCompat" />
            </RelativeLayout>


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btnLater"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_button_later"
                android:fontFamily="@font/robotoregular"
                android:gravity="center"
                android:paddingBottom="8dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:paddingTop="8dp"
                android:text="@string/lbl_later"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/btnRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:background="@drawable/custom_button_late_1"
                android:paddingBottom="8dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:fontFamily="@font/robotoregular"
                android:paddingTop="8dp"
                android:text="@string/lbl_rate"
                android:textStyle="bold"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>